--- a/assets/styles/airquill.less
+++ b/assets/styles/airquill.less
@@ -5,130 +5,12 @@
  * AirQuill v2.0.0 (https://airquill.io/)
  */
 
+@import "airquill.shared.less";
+@import "airquill.legacy.less";
+@import "airquill.fonts.less";
 @import "airquill.core.less";
+@import "airquill.home.less";
+@import "airquill.article.less";
+@import "airquill.about.less";
 @import "airquill.theme.light.less";
 @import "airquill.theme.dark.less";
-@import "airquill.theme.white.less";
-
-@base: #ff0000;
-@section-offset: 33px;
-
-@white: #ffffff;
-@yellow: #ffff00;
-
-@grey-light-ultra: #f2f2f2;
-@grey-light: #e6e6e6;
-@grey-middle: #666666;
-@grey-dark: #333333;
-
-@black: #000000;
-@superdark: #202020;
-@nearblack: #1f1f1f;
-
-/*@justnotwhite: 255 255 255 opacity: 87%*/
-
-@logo-light: "/assets/images/airquill-logo-light.png";
-@logo-white: "/assets/images/airquill-logo-white.png";
-@logo-dark: "/assets/images/airquill-logo-dark.png";
-@icon-yellow: "/assets/images/airquill-icon-yellow.png";
-@square-pattern-dark: "/assets/images/lifted-square-pattern-dark.png";
-@square-pattern-light: "/assets/images/lifted-square-pattern-light.png";
-@square-pattern-white: "/assets/images/lifted-square-pattern-white.png";
-@lined-square-pattern-light: "/assets/images/lined-square-pattern-light.png";
-
-@post-summary-hover-factor: 10%;
-@post-summary-bar-factor: 5%;
-@post-summary-bar-hover-factor: @post-summary-hover-factor + @post-summary-bar-factor;
-
-.theme-white {
-  color: @white;
-}
-
-.theme-yellow {
-  color: @yellow;
-}
-
-.theme-grey-light {
-  color: @grey-light;
-}
-
-.theme-grey-dark {
-  color: @grey-dark;
-}
-
-.theme-black {
-  color: @black;
-}
-
-
-
-
-
-
-
-
-
-.box-shadow(@style, @c) when (iscolor(@c)) {
-  -webkit-box-shadow: @style @c;
-  box-shadow:         @style @c;
-}
-.box-shadow(@style, @alpha: 50%) when (isnumber(@alpha)) {
-  .box-shadow(@style, rgba(0, 0, 0, @alpha));
-}
-.box {
-  color: saturate(@base, 5%);
-  border-color: lighten(@base, 30%);
-  div { .box-shadow(0 0 5px, 30%) }
-}
-
-p.content,
-section.post-content {
-  line-height: 32px;
-  font-size: 110%;
-  font-weight: 300;
-  font-family: "Roboto Slab", sans-serif;
-}
-
-section.post-content {
-  margin-top: 32px;
-  text-align: justify;
-}
-
-section.post-content p {
-  margin-bottom: 32px;
-}
-
-section.post-content blockquote p {
-  margin-bottom: 0px;
-}
-
-//div.panel-body.profile {
-//  vertical-align: middle;
-//}
-
-
-
-a.profile i {
-  font-size: 300%;
-  color: #E3E3E3;
-}
-
-.profile-links {
-  text-align: right;
-}
-
-.container.post p {
-  text-align: justify;
-}
-
-.footer-link:hover {
-  text-decoration: none;
-}
-
-table.light {
-  border-spacing: 10px;
-  border-collapse: separate;
-  td {
-    padding: 10px;
-  }
-}
