--- a/_layouts/airquill.html
+++ b/_layouts/airquill.html
@@ -7,7 +7,9 @@
 	
 		{% include header.html %}
 
-		{{ content }}
+		<main class="container">
+			{{ content }}
+		</main>
 
 		{% include footer.html %}
 
