Automate copyright year rollover.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 			<div class="col-md">
 				<h3>Resources</h3>
 				<p>
-					<i class="fas fa-copyright">&nbsp;&nbsp;&nbsp;</i>2014-2019 <a href="/about/">Tiese Barrell</a>. All rights reserved.
+					<i class="fas fa-copyright">&nbsp;&nbsp;&nbsp;</i>2014-{{site.time | date: "%Y"}} <a href="/about/">Tiese Barrell</a>. All rights reserved.
 				</p>
 				<p title="Follow posts by subscribing to the RSS or Atom feeds">
 					<i class="fas fa-rss-square">&nbsp;&nbsp;&nbsp;</i><a href="/feed.xml">RSS</a> or <a href="/atom.xml">Atom</a>
